test/error/param.ss
def f (n:Int)
  n * 3;
f("hello");
# -> type error
